whoami/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: whoami
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: whoami.zasdaym.live
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami
          servicePort: 80
